# karaoke

./: CMakeLists.txt  README.md
jsons/: test.json
libs/: stb_image.h  tiny_obj_loader.h
shaders/karaoke/karaoke_line/: shader.frag
shaders/karaoke_line/: shader.frag  shader.vert
shaders/plane/: shader.vert
shaders/tex_planes/: shader.frag
src/: main.cpp
src/camera/: CMakeLists.txt  camera.cpp  camera.hpp
src/common/: CMakeLists.txt  audio_manager.cpp  audio_manager.hpp  fft_manager.cpp  fft_manager.hpp  file.cpp  file.hpp  gltf.cpp  gltf.hpp  image.cpp  image.hpp
src/input/: CMakeLists.txt  input.cpp  input.hpp
src/karaoke/: CMakeLists.txt  karaoke.cpp  karaoke.hpp
src/karaoke_manager/: CMakeLists.txt  karaoke_manager.cpp  karaoke_manager.hpp
src/object/: CMakeLists.txt  karaoke_line.cpp  karaoke_line.hpp  object.hpp  tex_planes.cpp  tex_planes.hpp
src/object/basic/: plane.cpp  plane.hpp  tex_planes.hpp
src/object/interface/: object.cpp  object.hpp  transform.cpp  transform.hpp
src/object/karaoke/: karaoke_judge.cpp  karaoke_judge.hpp  karaoke_line.cpp  karaoke_line.hpp
src/scene/: CMakeLists.txt  scene.cpp  scene.hpp
src/shader/: CMakeLists.txt  shader.cpp  shader.hpp
src/texture/: CMakeLists.txt  texture.cpp  texture.hpp
src/vertex/: CMakeLists.txt  vertex.hpp
src/window/: CMakeLists.txt  window.cpp  window.hpp
